[package]
name = "tokio-socks"
description = "Asynchronous SOCKS proxy support for Rust."
documentation = "https://docs.rs/tokio-socks"
homepage = "https://github.com/sticnarf/tokio-socks"
repository = "https://github.com/sticnarf/tokio-socks"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["tokio", "async", "proxy", "socks", "socks5"]
license = "MIT"
version = "0.2.2"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "sticnarf/tokio-socks" }

[features]
tor = []
smol_executor = [ "smol"]
tokio_executor = [ "tokio"]
default = ["tokio_executor"]

[[example]]
name = "tor"
required-features = ["tor"]

[dependencies]
futures = "0.3"
tokio = { version="0.2", features = ["io-util", "stream", "tcp"], optional=true }
bytes = "0.4"
either = "1"
thiserror = "1.0"
smol = { version="0.1", optional=true }

[dev-dependencies]
tokio = { version = "0.2", features = ["io-util", "rt-threaded"] }
once_cell = "1.2.0"
hyper = "0.13"
