[package]
name = "tokio-socks"
description = "Asynchronous SOCKS proxy support for Rust."
documentation = "https://docs.rs/tokio-socks"
homepage = "https://github.com/sticnarf/tokio-socks"
repository = "https://github.com/sticnarf/tokio-socks"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["tokio", "async", "proxy", "socks", "socks5"]
license = "MIT"
version = "0.5.2"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "sticnarf/tokio-socks" }

[features]
default = ["tokio"]
futures = ["futures_compat"]
tor = []

[[example]]
name = "socket"
required-features = ["tor"]

[[example]]
name = "tor"
required-features = ["tor"]

[dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["io-util", "net"], optional = true }
either = "1"
thiserror = "1.0"
futures_compat = { package = "futures", version = "0.3", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
test-utils = { path = "test-utils" }
futures-executor = "0.3"
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "net"] }
smol = "2.0"
once_cell = "1.2.0"
hyper = "0.14"
