[package]
name = "tokio-socks"
description = "Asynchronous SOCKS proxy support for Rust."
documentation = "https://docs.rs/tokio-socks"
homepage = "https://github.com/sticnarf/tokio-socks"
repository = "https://github.com/sticnarf/tokio-socks"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["tokio", "async", "proxy", "socks", "socks5"]
license = "MIT"
version = "0.5.2"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2021"

[badges]
travis-ci = { repository = "sticnarf/tokio-socks" }

[[example]]
name = "chainproxy"
required-features = ["tokio"]

[[example]]
name = "socket"
required-features = ["tor", "tokio"]

[[example]]
name = "tor"
required-features = ["tor", "tokio"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
    "io",
    "std",
] }
tokio = { version = "1.0", default-features = false, features = [
    "io-util",
    "net",
], optional = true }
either = "1"
thiserror = "1.0"

[dev-dependencies]
futures-executor = "0.3"
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "net"] }
once_cell = { version = "1.2" }
tokio-util = { version = "0.7", features = ["compat"] }

[features]
default = ["tokio"]
tor = []
